1. Add Entity 2. Add Database connection with encrypted values 3. Add Webpack with Encore bundle 4. Add Service and tests for url shortening

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,7 +1,11 @@
 doctrine:
     dbal:
-        url: '%env(resolve:DATABASE_URL)%'
-
+        dbname:   '%env(DATABASE_NAME)%'
+        host:     localhost
+        user:     '%env(DATABASE_USER)%'
+        password: '%env(DATABASE_PASSWORD)%'
+        driver:   pdo_mysql
+        server_version: '%env(SERVER_MYSQL_VERSION)%'
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '5.7'
