--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.28.2",
+        "boostrap": "^2.0.0",
         "core-js": "^3.0.0",
         "jquery": "^3.4.1",
         "less-loader": "^5.0.0",
+        "popper.js": "^1.16.1",
         "regenerator-runtime": "^0.13.2",
+        "scss": "^0.2.4",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -14,5 +17,11 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "bootstrap": "4.0.0-alpha.6",
+        "bootstrap-less": "^3.3.8",
+        "less": "^3.11.1",
+        "tether": "^1.4.7"
     }
 }
