--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ APP_SECRET=8de08a37f0117d8aee377d5235a138ca
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
 SHORT_URL='https://cut.it'
+EXPIRATION_TIME='30 days'
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
